feat: Allow to edit time entry from time overview

--- a/src/lang/de.json
+++ b/src/lang/de.json
@@ -56,17 +56,6 @@
   "issues.issue.field.estimated-hours": "Geschätzter Aufwand",
   "issues.issue.field.estimated-hours.validation.greater-than-zero": "Muss größer als 0 sein",
   "issues.issue.field.spent-time": "Aufgewendete Zeit",
-  "issues.time-entry.field.spent-on": "Datum",
-  "issues.time-entry.field.spent-on.validation.in-future": "Kann nicht in der Zukunft liegen",
-  "issues.time-entry.field.hours": "Stunden",
-  "issues.time-entry.field.hours.validation.required": "Stunden wird benötigt",
-  "issues.time-entry.field.hours.validation.greater-than-zero": "Muss größer als 0 sein",
-  "issues.time-entry.field.hours.validation.less-than-24": "Muss weniger als ein Tag sein",
-  "issues.time-entry.field.user": "Benutzer",
-  "issues.time-entry.field.user.no-options": "Keine Benutzer",
-  "issues.time-entry.field.comments": "Kommentar",
-  "issues.time-entry.field.activity": "Aktivität ",
-  "issues.time-entry.field.activity.validation.required": "Aktivität wird benötigt",
   "issues.issue.field.notes": "Notizen",
   "issues.modal.add-spent-time.title": "Zeitaufwand hinzuzufügen",
   "issues.modal.add-spent-time.add-notes": "Notizen hinzufügen",
@@ -85,10 +74,23 @@
   "issues.modal.add-issue.submit": "Erstellen",
   "issues.error.fail-to-load-issues": "Fehler beim Laden der Tickets",
 
-  "time.entry-tooltip.project": "Projekt",
-  "time.entry-tooltip.issue": "Ticket",
-  "time.entry-tooltip.activity": "Aktivität",
-  "time.entry-tooltip.hours": "Stunden",
+  "time.time-entry.context-menu.open-in-redmine": "In Redmine öffnen",
+  "time.time-entry.context-menu.edit": "Bearbeiten",
+  "time.time-entry.field.project": "Projekt",
+  "time.time-entry.field.issue": "Ticket",
+  "time.time-entry.field.spent-on": "Datum",
+  "time.time-entry.field.spent-on.validation.in-future": "Kann nicht in der Zukunft liegen",
+  "time.time-entry.field.hours": "Stunden",
+  "time.time-entry.field.hours.validation.required": "Stunden wird benötigt",
+  "time.time-entry.field.hours.validation.greater-than-zero": "Muss größer als 0 sein",
+  "time.time-entry.field.hours.validation.less-than-24": "Muss weniger als ein Tag sein",
+  "time.time-entry.field.user": "Benutzer",
+  "time.time-entry.field.user.no-options": "Keine Benutzer",
+  "time.time-entry.field.comments": "Kommentar",
+  "time.time-entry.field.activity": "Aktivität",
+  "time.time-entry.field.activity.validation.required": "Aktivität wird benötigt",
+  "time.modal.edit-time-entry.title": "Aufgewendete Zeit bearbeiten",
+  "time.modal.edit-time-entry.submit": "Speichern",
   "time.error.fail-to-load-data": "Fehler beim Laden der Daten",
 
   "settings.general": "Allgemein",
