--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -56,17 +56,6 @@
   "issues.issue.field.estimated-hours": "Estimated hours",
   "issues.issue.field.estimated-hours.validation.greater-than-zero": "Must be greater than 0",
   "issues.issue.field.spent-time": "Spent time",
-  "issues.time-entry.field.spent-on": "Date",
-  "issues.time-entry.field.spent-on.validation.in-future": "Cannot be in the future",
-  "issues.time-entry.field.hours": "Hours",
-  "issues.time-entry.field.hours.validation.required": "Hours is required",
-  "issues.time-entry.field.hours.validation.greater-than-zero": "Must be greater than 0",
-  "issues.time-entry.field.hours.validation.less-than-24": "Must be less than one day",
-  "issues.time-entry.field.user": "User",
-  "issues.time-entry.field.user.no-options": "No users",
-  "issues.time-entry.field.comments": "Comments",
-  "issues.time-entry.field.activity": "Activity",
-  "issues.time-entry.field.activity.validation.required": "Activity is required",
   "issues.issue.field.notes": "Notes",
   "issues.modal.add-spent-time.title": "Add spent time",
   "issues.modal.add-spent-time.add-notes": "Add notes",
@@ -85,10 +74,23 @@
   "issues.modal.add-issue.submit": "Create",
   "issues.error.fail-to-load-issues": "Failed to load issues",
 
-  "time.entry-tooltip.project": "Project",
-  "time.entry-tooltip.issue": "Issue",
-  "time.entry-tooltip.activity": "Activity",
-  "time.entry-tooltip.hours": "Hours",
+  "time.time-entry.context-menu.open-in-redmine": "Open in Redmine",
+  "time.time-entry.context-menu.edit": "Edit",
+  "time.time-entry.field.project": "Project",
+  "time.time-entry.field.issue": "Issue",
+  "time.time-entry.field.spent-on": "Date",
+  "time.time-entry.field.spent-on.validation.in-future": "Cannot be in the future",
+  "time.time-entry.field.hours": "Hours",
+  "time.time-entry.field.hours.validation.required": "Hours is required",
+  "time.time-entry.field.hours.validation.greater-than-zero": "Must be greater than 0",
+  "time.time-entry.field.hours.validation.less-than-24": "Must be less than one day",
+  "time.time-entry.field.user": "User",
+  "time.time-entry.field.user.no-options": "No users",
+  "time.time-entry.field.comments": "Comments",
+  "time.time-entry.field.activity": "Activity",
+  "time.time-entry.field.activity.validation.required": "Activity is required",
+  "time.modal.edit-time-entry.title": "Edit time entry",
+  "time.modal.edit-time-entry.submit": "Save",
   "time.error.fail-to-load-data": "Failed to load data",
 
   "settings.general": "General",
