--- a/src/lang/ru.json
+++ b/src/lang/ru.json
@@ -56,17 +56,6 @@
   "issues.issue.field.estimated-hours": "Оценка временных затрат",
   "issues.issue.field.estimated-hours.validation.greater-than-zero": "Must be greater than 0",
   "issues.issue.field.spent-time": "Трудозатраты",
-  "issues.time-entry.field.spent-on": "Дата",
-  "issues.time-entry.field.spent-on.validation.in-future": "Не может быть позже текущей даты",
-  "issues.time-entry.field.hours": "Часы",
-  "issues.time-entry.field.hours.validation.required": "Укажите часы",
-  "issues.time-entry.field.hours.validation.greater-than-zero": "Должно быть больше 0",
-  "issues.time-entry.field.hours.validation.less-than-24": "Должно быть не больше 24 часов",
-  "issues.time-entry.field.user": "Пользователь",
-  "issues.time-entry.field.user.no-options": "No users",
-  "issues.time-entry.field.comments": "Комментарий",
-  "issues.time-entry.field.activity": "Деятельность",
-  "issues.time-entry.field.activity.validation.required": "Требуется хотя бы одно созданное действие в «Списки значений»",
   "issues.issue.field.notes": "Примечания",
   "issues.modal.add-spent-time.title": "Добавление затраченного времени",
   "issues.modal.add-spent-time.add-notes": "Добавление примечаний",
@@ -85,10 +74,23 @@
   "issues.modal.add-issue.submit": "Create",
   "issues.error.fail-to-load-issues": "Не удалось загрузить задачи",
 
-  "time.entry-tooltip.project": "Проект",
-  "time.entry-tooltip.issue": "Задача",
-  "time.entry-tooltip.activity": "Деятельность",
-  "time.entry-tooltip.hours": "Часы",
+  "time.time-entry.context-menu.open-in-redmine": "Открыть в Redmine",
+  "time.time-entry.context-menu.edit": "Edit",
+  "time.time-entry.field.project": "Проект",
+  "time.time-entry.field.issue": "Задача",
+  "time.time-entry.field.spent-on": "Дата",
+  "time.time-entry.field.spent-on.validation.in-future": "Не может быть позже текущей даты",
+  "time.time-entry.field.hours": "Часы",
+  "time.time-entry.field.hours.validation.required": "Укажите часы",
+  "time.time-entry.field.hours.validation.greater-than-zero": "Должно быть больше 0",
+  "time.time-entry.field.hours.validation.less-than-24": "Должно быть не больше 24 часов",
+  "time.time-entry.field.user": "Пользователь",
+  "time.time-entry.field.user.no-options": "No users",
+  "time.time-entry.field.comments": "Комментарий",
+  "time.time-entry.field.activity": "Деятельность",
+  "time.time-entry.field.activity.validation.required": "Требуется хотя бы одно созданное действие в «Списки значений»",
+  "time.modal.edit-time-entry.title": "Edit time entry",
+  "time.modal.edit-time-entry.submit": "Save",
   "time.error.fail-to-load-data": "Не удалось загрузить данные",
 
   "settings.general": "Основное",
