feat: Allow to edit issues

--- a/src/lang/de.json
+++ b/src/lang/de.json
@@ -15,6 +15,7 @@
   "issues.list.no-options": "Keine Tickets",
   "issues.context-menu.open-in-redmine": "In Redmine öffnen",
   "issues.context-menu.copy-id-to-clipboard": "In Zwischenablage kopieren",
+  "issues.context-menu.edit": "Ticket Bearbeiten",
   "issues.context-menu.timer.start": "Timer starten",
   "issues.context-menu.timer.pause": "Timer pausieren",
   "issues.context-menu.timer.reset": "Timer zurücksetzen",
@@ -53,8 +54,10 @@
   "issues.issue.field.version": "Zielversion",
   "issues.issue.field.start-date": "Beginn",
   "issues.issue.field.due-date": "Abgabedatum",
+  "issues.issue.field.due-date.validation.greater-than-start-date": "Abgabedatum muss größer als Beginn sein",
   "issues.issue.field.estimated-hours": "Geschätzter Aufwand",
   "issues.issue.field.estimated-hours.validation.greater-than-zero": "Muss größer als 0 sein",
+  "issues.issue.field.done-ratio": "Fortschritt",
   "issues.issue.field.spent-time": "Aufgewendete Zeit",
   "issues.issue.field.notes": "Notizen",
   "issues.modal.add-spent-time.title": "Zeitaufwand hinzuzufügen",
@@ -72,6 +75,9 @@
   "issues.modal.add-issue.tracker-with-no-enabled-fields.warning": "Es scheint, dass Sie eine Redmine-Version < 5.0.0 verwenden. Einige Felder werden möglicherweise nicht übernommen",
   "issues.modal.add-issue.unknown-workflow-permissions.warning": "Es ist möglich, dass einige Felder aufgrund fehlender Berechtigungen in Redmine nicht übernommen werden. Derzeit gibt es keine Möglichkeit, diese Berechtigungen zu überprüfen",
   "issues.modal.add-issue.submit": "Erstellen",
+  "issues.modal.edit-issue.title": "Ticket bearbeiten",
+  "issues.modal.edit-issue.issue-with-no-allowed-statuses.warning": "Es scheint, dass Sie eine Redmine-Version < 5.0.0 verwenden. Einige Statusänderungen werden möglicherweise nicht übernommen",
+  "issues.modal.edit-issue.submit": "Speichern",
   "issues.error.fail-to-load-issues": "Fehler beim Laden der Tickets",
 
   "time.time-entry.context-menu.open-in-redmine": "In Redmine öffnen",
@@ -79,6 +85,7 @@
   "time.time-entry.field.project": "Projekt",
   "time.time-entry.field.issue": "Ticket",
   "time.time-entry.field.spent-on": "Datum",
+  "time.time-entry.field.spent-on.validation.required": "Datum wird benötigt",
   "time.time-entry.field.spent-on.validation.in-future": "Kann nicht in der Zukunft liegen",
   "time.time-entry.field.hours": "Stunden",
   "time.time-entry.field.hours.validation.required": "Stunden wird benötigt",
