--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -15,6 +15,7 @@
   "issues.list.no-options": "No issues",
   "issues.context-menu.open-in-redmine": "Open in Redmine",
   "issues.context-menu.copy-id-to-clipboard": "Copy to clipboard",
+  "issues.context-menu.edit": "Edit issue",
   "issues.context-menu.timer.start": "Start timer",
   "issues.context-menu.timer.pause": "Pause timer",
   "issues.context-menu.timer.reset": "Reset timer",
@@ -53,8 +54,10 @@
   "issues.issue.field.version": "Target version",
   "issues.issue.field.start-date": "Start date",
   "issues.issue.field.due-date": "Due date",
+  "issues.issue.field.due-date.validation.greater-than-start-date": "Due date must be greater than start date",
   "issues.issue.field.estimated-hours": "Estimated hours",
   "issues.issue.field.estimated-hours.validation.greater-than-zero": "Must be greater than 0",
+  "issues.issue.field.done-ratio": "Done ratio",
   "issues.issue.field.spent-time": "Spent time",
   "issues.issue.field.notes": "Notes",
   "issues.modal.add-spent-time.title": "Add spent time",
@@ -72,6 +75,9 @@
   "issues.modal.add-issue.tracker-with-no-enabled-fields.warning": "It seems that you are using a Redmine version < 5.0.0. It is possible that some fields are not applied",
   "issues.modal.add-issue.unknown-workflow-permissions.warning": "It is possible that some fields are not applied due to missing permissions in Redmine. There is currently no way to check these permissions",
   "issues.modal.add-issue.submit": "Create",
+  "issues.modal.edit-issue.title": "Edit issue",
+  "issues.modal.edit-issue.issue-with-no-allowed-statuses.warning": "It seems that you are using a Redmine version < 5.0.0. It is possible that some statuses changes are not applied",
+  "issues.modal.edit-issue.submit": "Save",
   "issues.error.fail-to-load-issues": "Failed to load issues",
 
   "time.time-entry.context-menu.open-in-redmine": "Open in Redmine",
@@ -79,6 +85,7 @@
   "time.time-entry.field.project": "Project",
   "time.time-entry.field.issue": "Issue",
   "time.time-entry.field.spent-on": "Date",
+  "time.time-entry.field.spent-on.validation.required": "Date is required",
   "time.time-entry.field.spent-on.validation.in-future": "Cannot be in the future",
   "time.time-entry.field.hours": "Hours",
   "time.time-entry.field.hours.validation.required": "Hours is required",
