--- a/src/lang/ru.json
+++ b/src/lang/ru.json
@@ -15,6 +15,7 @@
   "issues.list.no-options": "Нет задач",
   "issues.context-menu.open-in-redmine": "Открыть в Redmine",
   "issues.context-menu.copy-id-to-clipboard": "Скопировать номер",
+  "issues.context-menu.edit": "Edit issue",
   "issues.context-menu.timer.start": "Запустить таймер",
   "issues.context-menu.timer.pause": "Остановить таймер",
   "issues.context-menu.timer.reset": "Сбросить таймер",
@@ -53,8 +54,10 @@
   "issues.issue.field.version": "Target version",
   "issues.issue.field.start-date": "Дата начала",
   "issues.issue.field.due-date": "Срок завершения",
+  "issues.issue.field.due-date.validation.greater-than-start-date": "Due date must be greater than start date",
   "issues.issue.field.estimated-hours": "Оценка временных затрат",
   "issues.issue.field.estimated-hours.validation.greater-than-zero": "Must be greater than 0",
+  "issues.issue.field.done-ratio": "Done ratio",
   "issues.issue.field.spent-time": "Трудозатраты",
   "issues.issue.field.notes": "Примечания",
   "issues.modal.add-spent-time.title": "Добавление затраченного времени",
@@ -72,6 +75,9 @@
   "issues.modal.add-issue.tracker-with-no-enabled-fields.warning": "It seems that you are using a Redmine version < 5.0.0. It is possible that some fields are not applied",
   "issues.modal.add-issue.unknown-workflow-permissions.warning": "It is possible that some fields are not applied due to missing permissions in Redmine. There is currently no way to check these permissions",
   "issues.modal.add-issue.submit": "Create",
+  "issues.modal.edit-issue.title": "Edit issue",
+  "issues.modal.edit-issue.issue-with-no-allowed-statuses.warning": "It seems that you are using a Redmine version < 5.0.0. It is possible that some statuses changes are not applied",
+  "issues.modal.edit-issue.submit": "Save",
   "issues.error.fail-to-load-issues": "Не удалось загрузить задачи",
 
   "time.time-entry.context-menu.open-in-redmine": "Открыть в Redmine",
@@ -79,6 +85,7 @@
   "time.time-entry.field.project": "Проект",
   "time.time-entry.field.issue": "Задача",
   "time.time-entry.field.spent-on": "Дата",
+  "time.time-entry.field.spent-on.validation.required": "Date is required",
   "time.time-entry.field.spent-on.validation.in-future": "Не может быть позже текущей даты",
   "time.time-entry.field.hours": "Часы",
   "time.time-entry.field.hours.validation.required": "Укажите часы",
