--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -130,6 +130,7 @@
   "settings.features.cache-comments.title": "Cache comments",
   "settings.features.cache-comments.description": "Cache comments until they are submitted",
   "settings.style": "Styling",
+  "settings.style.display-search-always.title": "Display search always",
   "settings.style.sticky-scroll.title": "Sticky scroll",
   "settings.style.group-issues-by-version.title": "Group issues by target version",
   "settings.style.show-issues-priority.title": "Show issues priority",
