--- a/src/lang/de.json
+++ b/src/lang/de.json
@@ -136,6 +136,7 @@
   "settings.style.show-issues-priority.title": "Tickets Priorität anzeigen",
   "settings.style.sort-issues-by-priority.title": "Tickets nach Priorität sortieren",
   "settings.style.pin-tracked-issues.title": "Aktive Tickets oben anheften",
+  "settings.style.pin-active-tab-issue.title": "Ticket des aktiven Tabs oben anheften",
   "settings.style.show-tooltips.title": "Tooltips anzeigen",
   "settings.style.time-format.title": "Format für Zeitspannen",
   "settings.save-settings": "Einstellungen speichern",
