--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -136,6 +136,7 @@
   "settings.style.show-issues-priority.title": "Show issues priority",
   "settings.style.sort-issues-by-priority.title": "Sort issues by priority",
   "settings.style.pin-tracked-issues.title": "Pin tracked issues to the top",
+  "settings.style.pin-active-tab-issue.title": "Pin issue of active tab to the top",
   "settings.style.show-tooltips.title": "Show tooltips",
   "settings.style.time-format.title": "Time span format",
   "settings.save-settings": "Save settings",
