--- a/src/lang/ru.json
+++ b/src/lang/ru.json
@@ -136,6 +136,7 @@
   "settings.style.show-issues-priority.title": "Показывать приоритет задач",
   "settings.style.sort-issues-by-priority.title": "Сортировать задачи по приоритету",
   "settings.style.pin-tracked-issues.title": "Pin tracked issues to the top",
+  "settings.style.pin-active-tab-issue.title": "Pin issue of active tab to the top",
   "settings.style.show-tooltips.title": "Показывать всплывающие подсказки",
   "settings.style.time-format.title": "Формат времени",
   "settings.save-settings": "Сохранить настройки",
