feat: Add rounding interval setting

--- a/src/lang/de.json
+++ b/src/lang/de.json
@@ -124,7 +124,12 @@
   "settings.features.extended-search.title": "Erweiterte Suche",
   "settings.features.extended-search.description": "Erlaubt Tickets zu suchen, die Ihnen nicht zugewiesen sind",
   "settings.features.round-time-nearest-quarter-hour.title": "Zu nächsten 15 min runden",
-  "settings.features.round-time-nearest-quarter-hour.description": "Timer auf nächsten Viertelstunde runden",
+  "settings.features.round-to-nearest-interval.title": "Auf nächstes Intervall runden",
+  "settings.features.round-to-nearest-interval.description": "Timer auf nächstes Intervall runden",
+  "settings.features.rounding-interval.placeholder": "Intervall",
+  "settings.features.rounding-interval.validation.required": "Intervall ist erforderlich",
+  "settings.features.rounding-interval.validation.greater-than-zero": "Muss größer als 0 sein",
+  "settings.features.rounding-interval.validation.less-than-or-equals-sixty": "Muss kleiner oder gleich 60 sein",
   "settings.features.add-notes.title": "Notizen hinzufügen",
   "settings.features.add-notes.description": "Notizen zu Ticket hinzufügen",
   "settings.features.cache-comments.title": "Kommentare zwischenspeichern",
