--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -123,8 +123,12 @@
   "settings.features.auto-pause-on-switch.description": "Automatic pause timers when changing issue",
   "settings.features.extended-search.title": "Extended search",
   "settings.features.extended-search.description": "Allows to search issues that are not assigned to you",
-  "settings.features.round-time-nearest-quarter-hour.title": "Round to nearest 15 min",
-  "settings.features.round-time-nearest-quarter-hour.description": "Round timer to nearest quarter hour",
+  "settings.features.round-to-nearest-interval.title": "Round to nearest interval",
+  "settings.features.round-to-nearest-interval.description": "Round timer to nearest interval",
+  "settings.features.rounding-interval.placeholder": "Interval",
+  "settings.features.rounding-interval.validation.required": "Interval is required",
+  "settings.features.rounding-interval.validation.greater-than-zero": "Must be greater than 0",
+  "settings.features.rounding-interval.validation.less-than-or-equals-sixty": "Must be less than or equals 60",
   "settings.features.add-notes.title": "Add notes",
   "settings.features.add-notes.description": "Adding notes to an issue",
   "settings.features.cache-comments.title": "Cache comments",
