--- a/src/lang/ru.json
+++ b/src/lang/ru.json
@@ -56,7 +56,7 @@
   "issues.issue.field.due-date": "Срок завершения",
   "issues.issue.field.due-date.validation.greater-than-start-date": "Due date must be greater than start date",
   "issues.issue.field.estimated-hours": "Оценка временных затрат",
-  "issues.issue.field.estimated-hours.validation.greater-than-zero": "Must be greater than 0",
+  "issues.issue.field.estimated-hours.validation.greater-than-zero": "Должно быть больше 0",
   "issues.issue.field.done-ratio": "Done ratio",
   "issues.issue.field.spent-time": "Трудозатраты",
   "issues.issue.field.notes": "Примечания",
@@ -123,8 +123,12 @@
   "settings.features.auto-pause-on-switch.description": "Автоматически останавливать таймеры при изменении задачи",
   "settings.features.extended-search.title": "Расширенный поиск",
   "settings.features.extended-search.description": "Разрешить поиск по задачам, которые не назначены на вас",
-  "settings.features.round-time-nearest-quarter-hour.title": "Округление до ближайших 15 минут",
-  "settings.features.round-time-nearest-quarter-hour.description": "Округлять таймер до ближайших 15 минут",
+  "settings.features.round-to-nearest-interval.title": "Round to nearest interval",
+  "settings.features.round-to-nearest-interval.description": "Round timer to nearest interval",
+  "settings.features.rounding-interval.placeholder": "Interval",
+  "settings.features.rounding-interval.validation.required": "Interval is required",
+  "settings.features.rounding-interval.validation.greater-than-zero": "Должно быть больше 0",
+  "settings.features.rounding-interval.validation.less-than-or-equals-sixty": "Must be less than or equals 60",
   "settings.features.add-notes.title": "Добавление примечаний",
   "settings.features.add-notes.description": "Добавлять примечания в задачи",
   "settings.features.cache-comments.title": "Кеширование комментариев",
