feat: Add notes without log time

--- a/src/lang/de.json
+++ b/src/lang/de.json
@@ -16,6 +16,7 @@
   "issues.context-menu.open-in-redmine": "In Redmine öffnen",
   "issues.context-menu.copy-id-to-clipboard": "In Zwischenablage kopieren",
   "issues.context-menu.edit": "Ticket Bearbeiten",
+  "issues.context-menu.add-notes": "Notizen hinzufügen",
   "issues.context-menu.timer.start": "Timer starten",
   "issues.context-menu.timer.pause": "Timer pausieren",
   "issues.context-menu.timer.reset": "Timer zurücksetzen",
@@ -60,6 +61,8 @@
   "issues.issue.field.done-ratio": "Fortschritt",
   "issues.issue.field.spent-time": "Aufgewendete Zeit",
   "issues.issue.field.notes": "Notizen",
+  "issues.issue.field.notes.validation.required": "Notizen werden benötigt",
+  "issues.issue.field.private-notes": "Private Notizen",
   "issues.modal.add-spent-time.title": "Zeitaufwand hinzuzufügen",
   "issues.modal.add-spent-time.add-notes": "Notizen hinzufügen",
   "issues.modal.add-spent-time.submit": "Erstellen",
@@ -78,6 +81,8 @@
   "issues.modal.edit-issue.title": "Ticket bearbeiten",
   "issues.modal.edit-issue.issue-with-no-allowed-statuses.warning": "Es scheint, dass Sie eine Redmine-Version < 5.0.0 verwenden. Einige Statusänderungen werden möglicherweise nicht übernommen",
   "issues.modal.edit-issue.submit": "Speichern",
+  "issues.modal.add-issue-notes.title": "Notizen hinzufügen",
+  "issues.modal.add-issue-notes.submit": "Speichern",
   "issues.error.fail-to-load-issues": "Fehler beim Laden der Tickets",
 
   "time.time-entry.context-menu.open-in-redmine": "In Redmine öffnen",
