--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -16,6 +16,7 @@
   "issues.context-menu.open-in-redmine": "Open in Redmine",
   "issues.context-menu.copy-id-to-clipboard": "Copy to clipboard",
   "issues.context-menu.edit": "Edit issue",
+  "issues.context-menu.add-notes": "Add notes",
   "issues.context-menu.timer.start": "Start timer",
   "issues.context-menu.timer.pause": "Pause timer",
   "issues.context-menu.timer.reset": "Reset timer",
@@ -60,6 +61,8 @@
   "issues.issue.field.done-ratio": "Done ratio",
   "issues.issue.field.spent-time": "Spent time",
   "issues.issue.field.notes": "Notes",
+  "issues.issue.field.notes.validation.required": "Notes is required",
+  "issues.issue.field.private-notes": "Private notes",
   "issues.modal.add-spent-time.title": "Add spent time",
   "issues.modal.add-spent-time.add-notes": "Add notes",
   "issues.modal.add-spent-time.submit": "Create",
@@ -78,6 +81,8 @@
   "issues.modal.edit-issue.title": "Edit issue",
   "issues.modal.edit-issue.issue-with-no-allowed-statuses.warning": "It seems that you are using a Redmine version < 5.0.0. It is possible that some statuses changes are not applied",
   "issues.modal.edit-issue.submit": "Save",
+  "issues.modal.add-issue-notes.title": "Add notes",
+  "issues.modal.add-issue-notes.submit": "Save",
   "issues.error.fail-to-load-issues": "Failed to load issues",
 
   "time.time-entry.context-menu.open-in-redmine": "Open in Redmine",
