--- a/src/lang/ru.json
+++ b/src/lang/ru.json
@@ -16,6 +16,7 @@
   "issues.context-menu.open-in-redmine": "Открыть в Redmine",
   "issues.context-menu.copy-id-to-clipboard": "Скопировать номер",
   "issues.context-menu.edit": "Edit issue",
+  "issues.context-menu.add-notes": "Add notes",
   "issues.context-menu.timer.start": "Запустить таймер",
   "issues.context-menu.timer.pause": "Остановить таймер",
   "issues.context-menu.timer.reset": "Сбросить таймер",
@@ -60,6 +61,8 @@
   "issues.issue.field.done-ratio": "Done ratio",
   "issues.issue.field.spent-time": "Трудозатраты",
   "issues.issue.field.notes": "Примечания",
+  "issues.issue.field.notes.validation.required": "Notes is required",
+  "issues.issue.field.private-notes": "Private notes",
   "issues.modal.add-spent-time.title": "Добавление затраченного времени",
   "issues.modal.add-spent-time.add-notes": "Добавление примечаний",
   "issues.modal.add-spent-time.submit": "Добавить",
@@ -78,6 +81,8 @@
   "issues.modal.edit-issue.title": "Edit issue",
   "issues.modal.edit-issue.issue-with-no-allowed-statuses.warning": "It seems that you are using a Redmine version < 5.0.0. It is possible that some statuses changes are not applied",
   "issues.modal.edit-issue.submit": "Save",
+  "issues.modal.add-issue-notes.title": "Add notes",
+  "issues.modal.add-issue-notes.submit": "Save",
   "issues.error.fail-to-load-issues": "Не удалось загрузить задачи",
 
   "time.time-entry.context-menu.open-in-redmine": "Открыть в Redmine",
