--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -105,6 +105,7 @@
   "settings.general.language.en": "English",
   "settings.general.language.de": "German",
   "settings.general.language.ru": "Russian",
+  "settings.general.language.fr": "French",
   "settings.general.language.missing-hint": "Missing your language?",
   "settings.redmine": "Redmine",
   "settings.redmine.url": "Redmine URL",
