--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -102,10 +102,10 @@
 
   "settings.general": "Général",
   "settings.general.language": "Langue",
-  "settings.general.language.en": "Anglais",
-  "settings.general.language.de": "Allemand",
-  "settings.general.language.ru": "Russe",
-  "settings.general.language.fr": "Français",
+  "settings.general.language.en": "Anglais (English)",
+  "settings.general.language.de": "Allemand (German)",
+  "settings.general.language.ru": "Russe (Russian)",
+  "settings.general.language.fr": "Français (French)",
   "settings.general.language.missing-hint": "Langue manquante ?",
   "settings.redmine": "Redmine",
   "settings.redmine.url": "URL de Redmine",
