fix(lang): Add missing message for fr language

--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -13,9 +13,11 @@
   "issues.filter.hide-completed-issues.title": "Masquer les tickets terminés",
   "issues.filter.hide-completed-issues.description": "100 % terminé, mais toujours ouvert",
   "issues.list.no-options": "Aucun ticket",
+  "issues.list.load-more": "Load more",
   "issues.context-menu.open-in-redmine": "Ouvrir dans Redmine",
   "issues.context-menu.copy-id-to-clipboard": "Copier dans le presse-papier",
   "issues.context-menu.edit": "Modifier le ticket",
+  "issues.context-menu.add-notes": "Add notes",
   "issues.context-menu.timer.start": "Démarrer le minuteur",
   "issues.context-menu.timer.pause": "Mettre le minuteur en pause",
   "issues.context-menu.timer.reset": "Réinitialiser le minuteur",
@@ -60,6 +62,8 @@
   "issues.issue.field.done-ratio": "Pourcentage terminé",
   "issues.issue.field.spent-time": "Temps passé",
   "issues.issue.field.notes": "Notes",
+  "issues.issue.field.notes.validation.required": "Notes is required",
+  "issues.issue.field.private-notes": "Private notes",
   "issues.modal.add-spent-time.title": "Ajouter du temps passé",
   "issues.modal.add-spent-time.add-notes": "Ajouter des notes",
   "issues.modal.add-spent-time.submit": "Créer",
@@ -78,6 +82,8 @@
   "issues.modal.edit-issue.title": "Modifier le ticket",
   "issues.modal.edit-issue.issue-with-no-allowed-statuses.warning": "Il semble que vous utilisez une version Redmine < 5.0.0. Certains changements de statut peuvent ne pas être appliqués",
   "issues.modal.edit-issue.submit": "Enregistrer",
+  "issues.modal.add-issue-notes.title": "Add notes",
+  "issues.modal.add-issue-notes.submit": "Save",
   "issues.error.fail-to-load-issues": "Impossible de charger les tickets",
 
   "time.time-entry.context-menu.open-in-redmine": "Ouvrir dans Redmine",
